name:          tasks
category:      Concurrency
version:       0.1
license:       BSD3
cabal-version: >= 1.8
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/analytics/tasks/
bug-reports:   http://github.com/analytics/tasks/issues
copyright:     Copyright (C) 2013 Edward A. Kmett
build-type:    Custom
tested-with:   GHC == 7.4.1, GHC == 7.6.1
synopsis:      Work-stealing
description:   A simple work-stealing scheduler.

extra-source-files:
  .travis.yml
  .ghci
  .gitignore
  .vim.custom
  travis/cabal-apt-install
  travis/config
  README.markdown
  CHANGELOG.markdown

source-repository head
  type: git
  location: git://github.com/analytics/tasks.git

-- You can disable the doctests test suite with -f-test-doctests
flag test-doctests
  default: True
  manual: True

flag lib-Werror
  default: False
  manual: True

library
  build-depends:
    base                      >= 4.3      && < 5,
    binary                    >= 0.5      && < 0.8,
    bytes                     >= 0.7      && < 1,
    cereal                    >= 0.3.5    && < 0.4,
    comonad                   >= 3        && < 4,
    contravariant             >= 0.4      && < 2,
    deepseq                   >= 1.3      && < 1.5,
    distributive              >= 0.3      && < 1,
    generic-deriving          >= 1.4      && < 1.6,
    ghc-prim,
    hashable                  >= 1.1.2.3  && < 1.3,
    hashable-extras           >= 0.1      && < 1,
    lens                      >= 3.9      && < 4,
    MonadCatchIO-transformers >= 0.3      && < 0.4,
    mtl                       >= 2.1.1    && < 2.2,
    profunctors               >= 3.3      && < 4,
    semigroupoids             >= 3.0.2    && < 4,
    semigroups                >= 0.8.4    && < 1,
    safecopy                  >= 0.8.1    && < 0.9,
    stm                       >= 2.3      && < 2.5,
    transformers              >= 0.3      && < 0.4,
    vector                    >= 0.9      && < 0.11

  exposed-modules:
    Control.Task
    Control.Task.Event
    Control.Task.Monad
    Control.Task.Observable
    Control.Task.Observer
    Control.Task.Promise
    Control.Task.STM
    Control.Task.Subscription

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: src

test-suite doctests
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  ghc-options:    -Wall -threaded
  hs-source-dirs: tests

  if !flag(test-doctests)
    buildable: False
  else
    build-depends:
      base,
      directory      >= 1.0,
      doctest        >= 0.9.1,
      filepath,
      generic-deriving,
      semigroups     >= 0.9,
      simple-reflect >= 0.3.1

  if impl(ghc<7.6.1)
    ghc-options: -Werror
